--- a/index.html
+++ b/index.html
@@ -79,14 +79,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-xs-12">
-            <ul class="left-info">
-              <li>
-                <a href="#"><i class="fa fa-clock-o"></i>Pon-Pet 09:00-17:00</a>
-              </li>
-              <li>
-                <a href="#"><i class="fa fa-phone"></i>TBD</a>
-              </li>
-            </ul>
+<!-- CLOCK + PHONE -->
           </div>
           <div class="col-md-4">
             <ul class="right-icons">
@@ -177,7 +170,6 @@
         <div class="item item-1">
           <div class="img-fill">
             <div class="text-content">
-              <h6>Lustan Marketing</h6>
               <h1>Pokrećemo promene<br />kroz digitalna rešenja</h1>
               <p>
                 U današnjem digitalnom dobu, online prisustvo je ključno za
