--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-xs-12">
-<!-- CLOCK + PHONE -->
+            <ul class="left-info">
+              <li>
+                <a href="#"><i class="fa fa-clock-o"></i>Pon-Pet 09:00-17:00</a>
+              </li>
+            </ul>
           </div>
           <div class="col-md-4">
             <ul class="right-icons">
