--- a/index.html
+++ b/index.html
@@ -209,23 +209,39 @@
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="service-card">
               <div class="service-icon">
+                <i class="fa fa-laptop"></i>
+              </div>
+              <div class="service-content">
+                <h4>Unapređujemo Vaše prisustvo na internetu</h4>
+                <p>
+                  Pravimo moderne, brze i optimizovane sajtove sa unikatnim
+                  dizajnom. Naš fokus je na funkcionalnosti, estetici i
+                  poslovnim rezultatima.
+                </p>
+                <div class="service-features">
+                  <span class="feature-tag">Izrada websajta</span>
+                  <span class="feature-tag">Redizajn websajta</span>
+                  <span class="feature-tag">Održavanje websajta</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 col-sm-12">
+            <div class="service-card">
+              <div class="service-icon">
                 <i class="fa fa-share-alt"></i>
               </div>
               <div class="service-content">
-                <h4>
-                  Gradimo snažan i prepoznatljiv identitet vašeg brenda na
-                  društvenim mrežama
-                </h4>
+                <h4>Podižemo Vašu poziciju na društvenim mrežama</h4>
                 <p>
                   Gradimo i jačamo Vaš brend na društvenim mrežama kreiranjem
                   modernog, vizuelno atraktivnog i angažovanog sadržaja.
                 </p>
                 <div class="service-features">
-                  <span class="feature-tag">Izrada sadržaja</span>
+                  <span class="feature-tag">Fotografisanje sadržaja</span>
+                  <span class="feature-tag">Kreiranje reklama</span>
                   <span class="feature-tag">Content strategija</span>
-                  <span class="feature-tag"
-                    >Planiranje i vođenje efektivnih kampanja</span
-                  >
                 </div>
               </div>
             </div>
@@ -237,16 +253,35 @@
                 <i class="fa fa-search"></i>
               </div>
               <div class="service-content">
-                <h4>Izgradite prednost u online pretragama</h4>
+                <h4>Pomažemo Vam da prestignete konkurenciju na Google-u</h4>
                 <p>
-                  Kroz precizno SEO planiranje i optimizovane strategije,
-                  osiguravamo da vaš brend bude vidljiv, relevantan i ispred
-                  konkurencije na svakom ključnom pretraživaču.
+                  SEO je kičma digitalnog marketinga. Naš tim koristi alate i
+                  strategije koji pomažu da budete među prvima na Google-u.
                 </p>
                 <div class="service-features">
                   <span class="feature-tag">Analiza sajta</span>
                   <span class="feature-tag">Praćenje konkurencije</span>
                   <span class="feature-tag">SEO optimizacija</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 col-sm-12">
+            <div class="service-card">
+              <div class="service-icon">
+                <i class="fa fa-code"></i>
+              </div>
+              <div class="service-content">
+                <h4>Kreiramo web aplikacije po Vašoj meri</h4>
+                <p>
+                  Od ideje do finalnog proizvoda, izrađujemo web aplikacije
+                  koje odgovaraju specifičnim potrebama Vašeg poslovanja i korisnika. Fokusiramo se na intuitivno korisničko iskustvo i funkcionalnosti koje donose vrednost.
+                </p>
+                <div class="service-features">
+                  <span class="feature-tag">Konsultacije</span>
+                  <span class="feature-tag">Strategija implementacije</span>
+                  <span class="feature-tag">Razvoj web aplikacije</span>
                 </div>
               </div>
             </div>
