--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <div class="col-md-12">
             <div class="section-heading">
               <h2>Naše <em>usluge</em></h2>
-              <span>Kompletan pristup digitalnom marketingu</span>
+              <span style="color: #fff">Kompletan pristup digitalnom marketingu</span>
             </div>
           </div>
 
@@ -353,8 +353,8 @@
           </div>
           <div class="col-lg-6 align-self-center">
             <div class="right-content">
-              <span>O nama</span>
-              <h2>Simply <em>different</em></h2>
+              <span style="color: #fff;">O nama</span>
+              <h2 style="color: #fff;">Simply <em>different</em></h2>
 
               <div class="about-text">
                 <p>
@@ -377,7 +377,7 @@
               <div class="about-highlight">
                 <div class="highlight-content">
                   <i class="fa fa-quote-left"></i>
-                  <h4>
+                  <h4 style="color: #fff;">
                     "Vaša podrška u digitalnoj transformaciji - od ideje do
                     rezultata. Lustan Marketing"
                   </h4>
@@ -557,7 +557,7 @@
     </div>
 
     <div class="partners">
-      <div class="container">
+      <!-- <div class="container">
         <div class="row">
           <div class="col-md-12">
             <div class="owl-partners owl-carousel">
@@ -583,7 +583,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <!-- Footer Starts Here -->
